Added argline and renamed so testfile works